[tool.poetry]
name = "udacity"
version = "0.1.0"
description = "Udacity course: Data Engineering Nano Degree"
authors = ["Tbs_Fchnr <tobias.fechner@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
